<resources>
    <string name="app_name">Scribe Bird</string>
    <string name="title_example">Your title</string>
    <string name="time_example">18:50</string>
    <string name="description_example">Lorem ipsum Lorem ipsum lorem…</string>
    <string name="day_example">Thu</string>
    <string name="data_example">30</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_item_note">Notes</string>
    <string name="Tasks">Tasks</string>
    <string name="simple_question">What are you thinking about?</string>
    <string name="add_weather">Add weather</string>
</resources>